# personal-website

./: .air.toml  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  biome.json  build.sh  config.json  dev.sh  flake.nix  go.mod  go.sum  gomod2nix.toml  lighthouserc.json  perf.sh
.github/workflows/: deploy.yml  docker.yml  perf.yml
client/: main.odin
cmd/: main.go  pages.go  turso.go
cmd/components/: blog_post.tmpl  footer.tmpl  header.tmpl
cmd/pages/: blog.tmpl  home.tmpl  post.tmpl
cmd/uploader/: default.nix  main.go
cmd/webserver/: cache.go  main.css  main.go  pages.go  render.go  turso.go
deploy/: BUILD.bazel  bucket.go  distribution.go  go.mod  go.sum  redirect.js
docker/: Dockerfile  nginx.conf
infra/: Pulumi.dev.yaml  Pulumi.yaml  go.mod  go.sum  main.go  records.go  validated_certificate.go
infra/static-files/: Pulumi.dev.yaml  Pulumi.yaml
internal/: connection.go  event.go  github.go  post.go  posts_table.go  project.go  render.go
nix/: client.nix  container.nix  default.nix  shell.nix  uploader.nix  webserver.nix
posts/: a_gleam_burrito.md  abusing_use.md  llms_dont_make_sense.md  odin_errdefer.md  webdev_zero_to_chaos.md
services/blob/: auth.go  default.nix  handlers.go  main.go  ratelimiter.go  storage.go
services/webserver/: default.nix  feeds.go  fragments.go  handlers.go  main.go  middleware.go  post.go  tailwind.config.js
src/: index.html
src/fonts/: Spectral-Medium.ttf:Zone.Identifier
src/fragments/: blog.html  tab2.html  tab3.html
src/html/: index.html
static/: variables.css
web/: index.html
(+137 files in other folders)
