load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "deploy_lib",
    srcs = [
        "bucket.go",
        "distribution.go",
        "main.go",
        "records.go",
        "validated_certificate.go",
    ],
    importpath = "github.com/ethanthoma/personal-website/deploy/deploy",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_pulumi_pulumi_aws_sdk_v5//go/aws:go_default_library",
        "@com_github_pulumi_pulumi_aws_sdk_v5//go/aws/acm:go_default_library",
        "@com_github_pulumi_pulumi_aws_sdk_v5//go/aws/cloudfront:go_default_library",
        "@com_github_pulumi_pulumi_aws_sdk_v5//go/aws/s3:go_default_library",
        "@com_github_pulumi_pulumi_cloudflare_sdk_v5//go/cloudflare:go_default_library",
        "@com_github_pulumi_pulumi_sdk_v3//go/pulumi:go_default_library",
        "@com_github_pulumi_pulumi_sdk_v3//go/pulumi/config:go_default_library",
    ],
)

go_binary(
    name = "deploy",
    embed = [":deploy_lib"],
    visibility = ["//visibility:public"],
)
